--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,8 @@
         android:id="@+id/home_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        tools:listitem="@layout/model_card"
+        tools:itemCount="5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
