--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,14 +7,14 @@
 
     <item android:id="@+id/action_weather"
         android:title="@string/weather"
-        android:icon="@drawable/ic_calculator"/>
+        android:icon="@drawable/ic_weather"/>
 
     <item android:id="@+id/action_profile"
         android:title="@string/profile"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_profile"/>
 
     <item android:id="@+id/action_settings"
         android:title="@string/settings"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_setting"/>
 
 </menu>
