--- a/app/src/main/res/layout/model_card.xml
+++ b/app/src/main/res/layout/model_card.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:foreground="?selectableItemBackground"
     android:layout_margin="@dimen/_3sdp"
     app:cardCornerRadius="@dimen/_4sdp">
 
